# OpenViking

./: .dockerignore  .gitignore  .ingest_record.json  .pr_agent.toml  CONTRIBUTING.md  CONTRIBUTING_CN.md  CONTRIBUTING_JA.md  Cargo.toml  Dockerfile  MANIFEST.in  Makefile  README.md  README_CN.md  README_JA.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: _build.yml  _codeql.yml  _test_full.yml  _test_lite.yml  api_test.yml  build-docker-image.yml  oc2ov_test.yml  pr-review.yml  pr.yml  release.yml
benchmark/RAG/: README.md  README_zh.md  ov.conf.example
benchmark/custom/: session_contention_benchmark.py
benchmark/locomo/: README.md
bot/: README.md  README_CN.md
bot/scripts/: restart_openviking_server.sh  test_restart_openviking_server.sh
bot/tests/: test_chat_functionality.py  test_minimax_provider.py
bot/workspace/: TOOLS.md
build_support/: versioning.py
crates/ov_cli/: Cargo.toml  README.md
crates/ov_cli/src/: client.rs  config.rs  error.rs  main.rs  output.rs
crates/ov_cli/src/commands/: admin.rs  chat.rs  content.rs  filesystem.rs  mod.rs  observer.rs  pack.rs  resources.rs  search.rs  session.rs  system.rs
crates/ov_cli/src/tui/: app.rs  mod.rs  tree.rs  ui.rs
crates/ragfs/: Cargo.toml  ORIGIN.md
crates/ragfs-python/: Cargo.toml  pyproject.toml
crates/ragfs-python/src/: lib.rs
crates/ragfs/src/: lib.rs
crates/ragfs/src/core/: errors.rs  filesystem.rs  mod.rs  mountable.rs  plugin.rs  types.rs
crates/ragfs/src/plugins/kvfs/: mod.rs
crates/ragfs/src/plugins/localfs/: mod.rs
crates/ragfs/src/plugins/memfs/: mod.rs
crates/ragfs/src/plugins/queuefs/: backend.rs  mod.rs
crates/ragfs/src/plugins/s3fs/: client.rs  mod.rs
crates/ragfs/src/plugins/serverinfofs/: mod.rs
crates/ragfs/src/plugins/sqlfs/: backend.rs  cache.rs  mod.rs
crates/ragfs/src/server/: config.rs  handlers.rs  main.rs  mod.rs  router.rs
deploy/helm/: README.md
docker/: openviking-console-entrypoint.sh
docs/design/: memory-extractor-optimization.md  multi-tenant-design.md  openclaw-context-engine-refactor.md  openclaw-integration.md
examples/: ov.conf.example  ovcli.conf.example
examples/basic-usage/: README.md  README_CN.md
examples/claude-code-memory-plugin/: README_CN.md
examples/claude-memory-plugin/: README_CN.md
examples/cloud/: GUIDE.md  bob.py  ov.conf.example
examples/k8s-helm/: README_CN.md
examples/openclaw-plugin/: INSTALL-AGENT.md  INSTALL-ZH.md  INSTALL.md  README.md  README_CN.md  alignment.ts  client.ts  config.ts  context-engine.ts  drift.ts  index.ts  install.sh  memory-ranking.ts  openclaw.plugin.json  package-lock.json  package.json  process-manager.ts  test-tool-capture.py  text-utils.ts
examples/opencode-memory-plugin/: README.md  README_CN.md  openviking-memory.ts
openviking/: __init__.py  agfs_manager.py  async_client.py  client.py  sync_client.py
openviking/client/: __init__.py  local.py  session.py
openviking/console/: README.md  __init__.py  app.py  bootstrap.py  config.py
openviking/core/: __init__.py  context.py  directories.py  skill_loader.py
openviking/crypto/: __init__.py  config.py  encryptor.py  exceptions.py  providers.py
openviking/message/: __init__.py  message.py  part.py
openviking/parse/: __init__.py  directory_scan.py  registry.py  tree_builder.py
openviking/pyagfs/: __init__.py
openviking/resource/: watch_manager.py  watch_scheduler.py
openviking/retrieve/: hierarchical_retriever.py  intent_analyzer.py  retrieval_stats.py
openviking/server/: __init__.py  api_keys.py  app.py  auth.py  bootstrap.py  config.py  dependencies.py  identity.py  local_input_guard.py  models.py
openviking/service/: core.py  debug_service.py  fs_service.py  pack_service.py  relation_service.py  resource_service.py  search_service.py  session_service.py  task_tracker.py
openviking/session/: __init__.py  compressor.py  compressor_v2.py  distillation_scheduler.py  distiller.py  episode_indexer.py  episode_migrator.py  memory_archiver.py  memory_deduplicator.py  memory_evolver.py  memory_extractor.py  session.py
openviking/storage/: __init__.py  collection_schemas.py  content_write.py  errors.py  local_fs.py  stats_aggregator.py  viking_fs.py  viking_vector_index_backend.py  vikingdb_manager.py
openviking/telemetry/: __init__.py  context.py  execution.py  operation.py  resource_summary.py  tracer.py
openviking/utils/: agfs_utils.py  circuit_breaker.py  code_hosting_utils.py  embedding_utils.py  media_processor.py  model_retry.py  network_guard.py  process_lock.py  resource_processor.py  skill_processor.py  summarizer.py  zip_safe.py
openviking_cli/: doctor.py  exceptions.py  rust_cli.py  server_bootstrap.py
openviking_cli/client/: base.py  http.py  sync_http.py
openviking_cli/retrieve/: types.py
openviking_cli/session/: user_id.py
openviking_cli/utils/: async_utils.py  cohere_rerank.py  logger.py  rerank.py  rerank_litellm.py  rerank_openai.py  uri.py
src/: CMakeLists.txt  abi3_engine_backend.cpp  abi3_x86_caps.cpp
src/common/: zip_sort.h
src/index/: common_structs.h
tests/: README.md  test_code_hosting_utils.py  test_config_loader.py  test_episode_v2_integration.py  test_memory_lifecycle.py  test_prompt_manager.py  test_server_config_loader.py  test_session_async_commit.py  test_session_task_tracking.py  test_task_tracker.py  test_telemetry_runtime.py  test_upload_utils.py
tests/agfs/: conftest.py  test_fs_binding.py  test_fs_binding_s3.py  test_fs_local.py  test_fs_s3.py
tests/api_test/: conftest.py  requirements.txt
tests/cli/: conftest.py  test_doctor.py  test_user_identifier.py
tests/client/: test_file_operations.py  test_filesystem.py  test_http_client_config.py  test_http_client_local_upload.py  test_import_export.py  test_lifecycle.py  test_resource_management.py  test_skill_management.py
tests/engine/: test_common.cpp  test_index_engine.cpp
tests/integration/: bench_ingest_locomo.py  bench_memory_locomo.py  bench_memory_v2_models.py  bench_recall_locomo.py  bench_recall_r10_locomo.py  conftest.py  debug_zero_recall.py  test_compressor_v2_e2e.py  (+11 more)
(+519 files in other folders)
